# cnr_drapebot

./: .gitignore  .rosinstall  README.md
abb_app/.kdev4/: abb_app.kdev4
abb_app/config/: drape_cell_configurations.yaml  drape_cell_hw.yaml  moveit.rviz  mqtt_config.yaml
abb_app/launch/: cell_bringup.launch  mqtt_converter.launch
cnr_mqtt/: CMakeLists.txt  README.md  package.xml
cnr_mqtt/config/: conf.yaml
cnr_mqtt/include/cnr_mqtt/: mqtt_client.h  test_mqtt_client.h
cnr_mqtt/launch/: mqtt_converter.launch
cnr_mqtt/src/: main.cpp  mqtt_client.cpp  mqtt_converter.cpp
cnr_mqtt_converter/: CMakeLists.txt  package.xml
cnr_mqtt_converter/include/cnr_mqtt/: mqtt_converter_client.h
cnr_mqtt_converter/include/cnr_mqtt_converter/: mqtt_converter_client.h
cnr_mqtt_converter/src/: mqtt_converter_client.cpp  mqtt_converter_node.cpp
cnr_mqtt_hardware_interface/: CMakeLists.txt  README.md  package.xml  plugin.xml
cnr_mqtt_hardware_interface/include/cnr_mqtt_hardware_interface/: cnr_mqtt_robot_hw.h  mqtt_client_hw.h  utils.h
cnr_mqtt_hardware_interface/src/cnr_mqtt_hardware_interface/: .cnr_mqtt_robot_hw.cpp.swp  cnr_mqtt_robot_feedback_repeater_node.cpp  cnr_mqtt_robot_hw.cpp  mqtt_client_hw.cpp  mqtt_cmd.cpp.bck  mqtt_cmd2.cpp.bck  mqtt_listener.cpp
cnr_mqtt_hardware_interface/test/: test.cpp  test.launch
cnr_msgs_visualization/: CMakeLists.txt  package.xml
cnr_msgs_visualization/src/: cnr_msgs_visualization_node.cpp
cnr_open_loop_delta_position_controller/: CMakeLists.txt  package.xml  plugin.xml
cnr_open_loop_delta_position_controller/include/cnr_open_loop_delta_position_controller/: cnr_open_loop_delta_position_controller.h
cnr_open_loop_delta_position_controller/src/cnr_open_loop_delta_position_controller/: cnr_open_loop_delta_position_controller.cpp
deformation_ctrl/: CMakeLists.txt  README.md  package.xml  plugin.xml
deformation_ctrl/include/deformation_ctrl/: deformation_ctrl.h
deformation_ctrl/src/deformation_ctrl/: deformation_ctrl.cpp
drapebot_mqtt_client/: CMakeLists.txt  package.xml
drapebot_mqtt_client/include/: drapebot_mqtt_client.h
drapebot_mqtt_client/include/drapebot_mqtt_client/: drapebot_mqtt_client.h  drapebot_mqtt_client.h.bck
drapebot_mqtt_client/src/: drapebot_mqtt_client.cpp  drapebot_mqtt_client.cpp.bck  drapebot_mqtt_client_node.cpp
drapecell_robot_bringup/: README.md
drapecell_robot_bringup/config/: drapecell_controllers.yaml  drapecell_hardware_base.yaml  drapecell_hardware_egm.yaml
drapecell_robot_bringup/launch/: drapecell_6axis_robot.launch
egm_joint_state_to_mqtt_controller/: CMakeLists.txt  package.xml
egm_joint_state_to_mqtt_controller/include/egm_joint_state_to_mqtt_controller/: egm_joint_state_to_mqtt_controller.h
egm_joint_state_to_mqtt_controller/src/: egm_joint_state_to_mqtt_controller.cpp
egm_to_mqtt_state_ctrl/: CMakeLists.txt  package.xml  plugin.xml
egm_to_mqtt_state_ctrl/include/egm_to_mqtt_state_ctrl/: egm_to_mqtt_state_ctrl.h
egm_to_mqtt_state_ctrl/src/: .egm_to_mqtt_state_ctrl.cpp.kate-swp  egm_to_mqtt_state_ctrl.cpp
mqtt_to_joint_position_controller/: CMakeLists.txt  mqtt_to_joint_position_controller_plugin.xml  package.xml
mqtt_to_joint_position_controller/config/: mqtt_config.yaml
mqtt_to_joint_position_controller/include/mqtt_to_joint_position_controller/: mqtt_to_joint_position_controller.h
mqtt_to_joint_position_controller/src/: mqtt_to_joint_position_controller.cpp
robot_controllers_bck/drapecell/: PF_DrapeBot_BACKUP_2022-06-10.7z
tez_app/config/: moveit.rviz  multichain_hw.yaml  tez_configurations.yaml  tez_hw.yaml  topics_hw.yaml
tez_app/config/robot_1/: configurations.yaml  configurations_single_robot.yaml  mqtt_config.yaml  robot_hw.yaml
tez_app/config/robot_2/: mqtt_config.yaml  robot_hw.yaml
tez_app/launch/: cell_bringup.launch  mqtt_converter.launch
tez_description/: CMakeLists.txt  package.xml
tez_description/launch/: tez_cell_fullmesh_visualization.launch
tez_description/rviz/: tez_workcell.rviz
tez_description/test/: test.launch
tez_description/urdf/: .tez_cell_fullmesh.urdf.kate-swp  tez_cell_boxes.urdf  tez_cell_fullmesh.urdf  tez_cell_reducedmesh.urdf
tez_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
tez_moveit2/config/: fake_controllers.yaml  gazebo_tez_cell.urdf  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml  tez_cell.srdf
tez_moveit2/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
