<?xml version="1.0"?>
<package format="2">
  <name>cnr_mqtt_converter</name>
  <version>0.0.0</version>
  <description>The cnr_mqtt package</description>

  <maintainer email="marie@todo.todo">marie</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend> roscpp </depend>
  <depend> configuration_msgs </depend>
  <depend> cnr_mqtt_client </depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
