<?xml version="1.0"?>
<package format="2">
  <name>cnr_mqtt_hardware_interface</name>
  <version>0.0.0</version>
  <description>The cnr_mqtt_hardware_interface package</description>

  <maintainer email="iras@stiima.cnr.it">maxwell</maintainer>


  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/cnr_fake_hardware_interface</url> -->
  <!-- <author email="iras@stiima.cnr.it">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>cnr_hardware_interface</depend>
  <depend>cnr_controller_interface_params</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>cnr_mqtt</depend>
  <depend> state_space_filters      </depend>
  
  <depend>code_coverage</depend>
  <depend>rostest</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <hardware_interface plugin="${prefix}/plugin.xml" />
  </export>
</package>
