<?xml version="1.0"?>
<package format="2">
  <name>cnr_open_loop_delta_position_controller</name>
  <version>0.0.0</version>
  <description>The cnr_open_loop_delta_position_controller package</description>

  <maintainer email="jacobi@todo.todo">jacobi</maintainer>

  <license>TODO</license>


  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cnr_controller_interface</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>subscription_notifier</depend>
  <depend>state_space_filters</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
		<controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
