<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>egm_to_mqtt_state_ctrl</name>
  <version>0.5.0</version>
  <description>The mqtt_to_joint_position_controller package</description>

  <maintainer email="enric@todo.todo">enric</maintainer>
  <license>TODO</license>
  
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>abb_egm_hardware_interface</depend>
  <depend>abb_egm_msgs</depend>
  <depend>abb_robot_cpp_utilities</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>drapebot_mqtt_client</depend>

  <exec_depend>controller_manager</exec_depend>
  
  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
